# spacemind

./: .gitignore  Cargo.toml  README.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/tests/: scan_cli.rs
crates/spacemind-core/: Cargo.toml
crates/spacemind-core/src/: lib.rs
crates/spacemind-rules/: Cargo.toml
crates/spacemind-rules/src/: lib.rs
crates/spacemind-scanner/: Cargo.toml
crates/spacemind-scanner/src/: lib.rs
docs/: scanner-cli.md
