[package]
name = "spacemind-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "spacemind"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
spacemind-core.workspace = true
spacemind-rules.workspace = true
spacemind-scanner.workspace = true

